<resources>
    <string name="drawer_search">Search </string>
    <string name="drawer_barcode">Scan Barcode</string>
    <string name="drawer_bestseller">Bestsellers</string>
    <string name="drawer_to_read">To Read</string>
    <string name="drawer_reading">Reading</string>
    <string name="drawer_finished">Finished</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_about">About</string>
    <string name="detail_header_overview">OVERVIEW</string>
    <string name="detail_button_photos">PHOTOS</string>
    <string name="detail_button_videos">VIDEOS</string>
    <string name="detail_button_reviews">REVIEWS</string>
    <string name="detail_header_crew">CREW</string>
    <string name="detail_header_cast">CAST</string>
    <string name="detail_button_see_all">SEE ALL</string>
    <string name="detail_vote_count">%1$s votes</string>
    <string name="detail_crew_format">%1$s : %2$s</string>
    <string name="detail_fab_watched_add">Mark as Watched</string>
    <string name="detail_fab_watched_remove">Remove from Watched</string>
    <string name="detail_fab_to_watch_add">Want to Watch</string>
    <string name="detail_fab_to_watch_remove">Remove from \"To Watch\"</string>
    <string name="detail_watched_added">Movie marked as watched</string>
    <string name="detail_watched_removed">Movie removed from watched</string>
    <string name="detail_to_watch_added">Movie marked as \"To Watch\"</string>
    <string name="detail_to_watch_removed">Movie removed from \"To Watch\"</string>
    <string name="server_unreachable">Oops! Something went wrong.\nPlease check your internet connection.</string>
    <string name="try_again">Try Again?</string>
    <string name="loading">Loading&#8230;</string>
    <string name="saved_empty">You haven\'t added any movies\nto this list</string>
    <string name="action_grid">Grid View</string>
    <string name="action_list">List View</string>
    <string name="action_compact">Compact View</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_share_text">Check out %1$s - %2$s</string>
    <string name="action_share_using">Share using&#8230;</string>
    <string name="action_backup">Backup/Restore Data</string>
    <string name="action_rate">Rate on Google Play</string>
    <string name="action_twitter">Follow on Twitter</string>
    <string name="action_email">Send Feedback</string>
    <string name="action_about">About</string>
    <string name="action_email_using">Send email&#8230;</string>
    <string name="action_email_error">There are no email clients installed!</string>
    <string name="drawer_projects">Projects</string>
    <string name="drawer_events">events</string>
    <string name="drawer_News">News</string>
    <string name="drawer_members"> Team members</string>
    <string name="drawer_watched">Watched</string>
    <string name="drawer_to_see">To Watch</string>
    <string name="action_sort">Sort </string>
    <string name="action_sort_title">Sort by Title</string>
    <string name="action_sort_author">Sort by creator</string>
    <string name="action_share_subject">Check out %1$s</string>
    <string name="action_share_title">Share book&#8230;</string>
    <string name="action_open">Open in Browser</string>
    <string name="app_name">TeamUp</string>
    <string name="button_Projects">Projects</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">See Next</string>
    <string name="backdrop_title">Our Projects</string>
    <string name="backdrop_subtitle"> top 20 </string>
    <string name="loading_empty">Loading…</string>
    <string name="loading_register">Sending registration request…</string>
    <string name="loading_login">Logging in…</string>
    <string name="loading_projects">Loading Projects listing…</string>
    <string name="loading_menu_items">Loading menu items…</string>
    <string name="loading_submit_order">Submitting Project…</string>
    <string name="loading_placing_order">Placing your order…</string>
    <string name="title_activity_project_creation">Project Creation</string>
    <string name="activity_login">Endless-To-Go Login</string>
    <string name="button_login">Login</string>
    <string name="one">Fragment one</string>
    <string name="two">Fragment two</string>
    <string name="three">Fragment three</string>
    <string name="four">Fragment four</string>
    <string name="button_login_facebook">Facebook Login</string>
    <string name="button_login_twitter">Login with Twitter</string>
    <string name="title_activity_project_detail_activity">Project_detail_activity</string>
    <string name="start_stream">START STREAM</string>
    <string name="Team_members">Team Members</string>
    <string name="settings_uppercase">SETTINGS</string>
    <string name="SignUp">SignUp</string>
    <string name="logIn">LogIn</string>
    <string name="cancel">Cancel</string>
    <string name="slide_1_APP">The New ESPRIT Mobile Team App</string>
    <string name="slide_2_volunteer_professionals">Created by The Team to The Team</string>
    <string name="slide_3_download_and_go">Make the work easier and smarter</string>
    <string name="slide_4_different_languages">Available in different languages</string>
    <string name="slide_1_african_story_books_subtitle">That anyone can freely translate and distribute.</string>
    <string name="slide_2_volunteer_professionals_subtitle">Every day our Team need This app.</string>
    <string name="slide_3_download_and_go_subtitle">available on one click to show you every thing you want to know about ESPRIT Mobile</string>
    <string name="slide_4_different_languages_subtitle">English, friensh and more!</string>
    <string name="view_sample_tut">View </string>
    <string name="tutorial_done">FIN</string>
    <string name="info_registered_template">Registered. ObjectId: %s</string>
    <string name="info_registered_success">Registered successfully</string>
    <string name="info_logged_in">Logged in. ObjectId: %s</string>
    <string name="enter_email">Please enter your Email</string>
    <string name="send_password">Submit</string>
    <string name="google_button_text">Google+</string>
    <string name="register_prompt">Do not have an account? Register now</string>
    <string name="forget_password_prompt">Did you forget your Password ?</string>
    <string name="divider_or">OR</string>
    <string name="register_link">Register</string>
    <string name="forget_password_link">Password</string>
    <string name="arrow_description">arrow image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_registration">TeamUp Registration</string>
    <string name="label_name">Name:</string>
    <string name="label_email">Email address:</string>
    <string name="label_password">Password:</string>
    <string name="label_password_confirm">Retype password:</string>
    <string name="button_register">Register</string>
    <string name="warning_name_empty">Name cannot be empty</string>
    <string name="warning_name_lowercase">Name should start from an uppercase letter</string>
    <string name="warning_email_empty">Email cannot be empty</string>
    <string name="warning_email_invalid">Invalid email format</string>
    <string name="warning_password_empty">Password cannot be empty</string>
    <string name="warning_passwords_do_not_match">Passwords do not match</string>
    <string name="info_registered">Registered. ObjectId: %s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="description_app_icon">App Icon</string>
    <string name="about_version">version 1.0</string>
    <string name="about_made_by">Made By</string>
    <string name="about_name">Ahlem Daoud</string>
    <string name="about_powered_by">Powered By</string>
    <string name="user_profile_photo">http://igcdn-photos-f-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-19/929118_455075441302693_1605108410_a.jpg</string>
    <string-array name="user_photos">
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xpf1/t51.2885-15/s306x306/e15/10665483_429615813855717_1490926670_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10891026_694434897342602_1094773634_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10894920_1382218332084671_10354293_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10895429_768163716566132_692639371_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899087_405295322969722_20422376_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899123_922231267802027_1123900984_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10903214_589111004559561_1485881959_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10914479_770066599745785_704061869_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10914587_1580079332227764_829762970_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10919231_605000369644967_1578007175_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10932142_330866587116424_1327271556_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10932410_1544715455813452_1107632347_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xfp1/t51.2885-15/s306x306/e15/891516_579817258815508_1989379587_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/1922172_719849754801056_911351010_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10914370_1519297625009641_722250486_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10903746_368501953321344_2002746420_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10903270_1397263717236338_950192395_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10903242_441936642627221_576882729_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899295_796858437028648_664655000_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899139_948470841831743_1406659049_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899123_922231267802027_1123900984_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899087_405295322969722_20422376_n.jpg</item>
    </string-array>
    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_experience" translatable="false">Experience</string>
    <string name="ProjectsNumbers" translatable="false">Projects</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="sender_badge" translatable="false">Name</string>
    <string name="biography_badge" translatable="false">BIOGRAPHY</string>
    <string name="request_btn_text" translatable="false">Visit Profile</string>
    <string name="btn_annotation_mock" translatable="false"></string>
</resources>