<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_login"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:columnCount="2"
        android:rowCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_password" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />
    </GridLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:ems="8"
        android:text="@string/button_login" />

    <TextView
        android:id="@+id/registerPromptText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/view_vertical_margin"
        android:paddingTop="@dimen/view_vertical_margin"
        android:text="@string/register_prompt"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/abc_text_size_subtitle_material_toolbar" />

    <TextView
        android:id="@+id/forgetpasswordPromptText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/view_vertical_margin"
        android:paddingTop="@dimen/view_vertical_margin"
        android:text="@string/forget_password_prompt"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/abc_text_size_subtitle_material_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="0.45"
            android:background="#c0c0c0" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="center_horizontal"
            android:text="@string/divider_or"
            android:textStyle="italic" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="0.45"
            android:background="#c0c0c0" />
    </LinearLayout>

    <Button
        android:id="@+id/loginFacebookButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp48"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:layout_marginTop="@dimen/dp4"
        android:height="@dimen/dp40"
        android:background="@drawable/btn_facebook_bg"
        android:ems="12"
        android:text="@string/button_login_facebook" />

    <Button
        android:id="@+id/loginGoogleButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp48"
        android:layout_marginTop="@dimen/dp4"
        android:height="@dimen/dp40"
        android:background="@drawable/btn_google_bg"
        android:text="@string/google_button_text" />


</LinearLayout>
